<resources>
    <string name="app_name">My Modules</string>
    <string name="c346">C346 Mobile App Development </string>
    <string name="c203">C203 Web Appln Development in php</string>
    <string name="c218">C218 UI/UX Design for apps</string>
    <string name="c235">C235 IT Security and Management</string>
    <string name="c206">C206 Software Development Process</string>

    <string name="code">activity_c346.xml </string>
    <string name="name">Module Name: </string>
    <string name="year">Academic Year: </string>
    <string name="sem">Semester: </string>
    <string name="credit">Module Credit: </string>
    <string name="venue">Venue: </string>

    <string name="nameC346">Mobile App Development</string>
    <string name="nameC203">Web Appln Development in php</string>
    <string name="nameC218">UI/UX Design for apps</string>
    <string name="nameC235">IT Security and Management</string>
    <string name="nameC206">Software Development Process</string>


    <string name="one">1</string>
    <string name="four">4</string>
    <string name="thisyear">2023</string>

    <string name="w64n">W64N</string>
    <string name="e63a">E63A</string>

    <string name="back">GO BACK TO HOME</string>
</resources>