<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvC346"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c346" />

    <TextView
        android:id="@+id/tvC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c203" />

    <TextView
        android:id="@+id/tvC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c218" />

    <TextView
        android:id="@+id/tvC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c235" />

    <TextView
        android:id="@+id/tvC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c206" />

</LinearLayout>